k8s/intro/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: NodePort
  selector:
    app: echo
  ports:
    - port: 80
      # name: http
