k8s/intro/service-wo-release-label.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-wo-release-label
  labels:
    app: echo-wo-release-label
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
