k8s/intro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
    release: summer
  ports:
    - name: http
      port: 80
