k8s/intro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  labels:
    app: echo
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      set $agentflag 0;
      if ($http_user_agent ~* "(Mobile)" ) {
        set $agentflag 1;
      }

      if ($agentflag = 1) {
        return 301 http://gihyo.jp/;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: ch05.gihyo.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo-wo-release-label
                port:
                  number: 80
